--- a/RestaurantService.yml
+++ b/RestaurantService.yml
@@ -4,14 +4,15 @@ spring:
 
   datasource:
     url: jdbc:mysql://localhost:3306/dibya
-    driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: dibya
-
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
     
   
   boot:
