--- a/RestaurentService-2.yml
+++ b/RestaurentService-2.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: RestaurantService
+    name: RestaurentService-2
 
   datasource:
     url: jdbc:mysql://localhost:3306/dibya
