--- a/RestaurantService.yml
+++ b/RestaurantService.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: RestaurentService-2
+    name: RestaurantService
 
   datasource:
     url: jdbc:mysql://localhost:3306/dibya
