--- a/RestaurentService-1.yml
+++ b/RestaurentService-1.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: RestaurentService
+    name: RestaurentService-1
 
   datasource:
     url: jdbc:mysql://localhost:3306/dibya
