--- a/Auth-Service-1.yml
+++ b/Auth-Service-1.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: Auth-Service
+    name: Auth-Service-1
 
   datasource:
     url: jdbc:mysql://localhost:3306/dibya
